--- a/Anikate Agrawal2/Covid-API/index.html
+++ b/Anikate Agrawal2/Covid-API/index.html
@@ -235,9 +235,9 @@
             <h3>ABOUT ME</h3>
                 <br>
             
-                <h4>Email: singhmonishkass@gmail.com</h4>
+                <h4>Email: anikateag7316@gmail.com</h4>
                 <br>
-                <h4>&copy Monishka Singh , All rights Reserved</h4>
+                <h4>&copy Anikate Agrawal , All rights Reserved</h4>
             
         </div>
 
